# raspberrypi5-rtsp-server

./: .gitignore  CMakeLists.txt  ClientSession.cpp  ClientSession.h  Doxyfile  LICENSE  Makefile  MediaStreamHandler.cpp  MediaStreamHandler.h  Protos.cpp  Protos.h  README.md  RTCP.cpp  RTCP.h  RTP.cpp  RTP.h  RequestHandler.cpp  RequestHandler.h  SocketHandler.cpp  SocketHandler.h  TCPHandler.cpp  TCPHandler.h  UDPHandler.cpp  UDPHandler.h  conf.ini  logger.cpp  logger.h  main.cpp  mainpage.dox  utils.cpp  utils.h
docs/html/: AudioCapture_8cpp.html  AudioCapture_8cpp_8o_8d.html  AudioCapture_8cpp__incl.map  AudioCapture_8cpp__incl.md5  AudioCapture_8h.html  AudioCapture_8h__dep__incl.map  AudioCapture_8h__dep__incl.md5  AudioCapture_8h__incl.map  AudioCapture_8h__incl.md5  AudioCapture_8h_source.html  AudioServer_2build_2CMakeFiles_23_829_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  AudioServer_2build_2CMakeFiles_23_829_82_2CompilerIdC_2CMakeCCompilerId_8c.html  AudioServer_2build_2CMakeFiles_2AudioServer_8dir_2main_8cpp_8o_8d.html  AudioServer_2main_8cpp.html  AudioServer_2main_8cpp__incl.map  AudioServer_2main_8cpp__incl.md5  CameraServer_2build_2CMakeFiles_23_829_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CameraServer_2build_2CMakeFiles_23_829_82_2CompilerIdC_2CMakeCCompilerId_8c.html  CameraServer_2build_2CMakeFiles_2CameraServer_8dir_2main_8cpp_8o_8d.html  CameraServer_2main_8cpp.html  CameraServer_2main_8cpp__incl.map  CameraServer_2main_8cpp__incl.md5  ClientSession_8cpp.html  ClientSession_8cpp__incl.map  ClientSession_8cpp__incl.md5  ClientSession_8h.html  ClientSession_8h__dep__incl.map  ClientSession_8h__dep__incl.md5  ClientSession_8h__incl.map  ClientSession_8h__incl.md5  ClientSession_8h_source.html  DataCapture_8cpp.html  DataCapture_8cpp__incl.map  DataCapture_8cpp__incl.md5  DataCapture_8h.html  DataCapture_8h__dep__incl.map  DataCapture_8h__dep__incl.md5  DataCapture_8h__incl.map  DataCapture_8h__incl.md5  DataCapture_8h_source.html  (+358 more)
docs/latex/: AudioCapture_8cpp.tex  AudioCapture_8cpp_8o_8d.tex  AudioCapture_8cpp__incl.md5  AudioCapture_8h.tex  AudioCapture_8h__dep__incl.md5  AudioCapture_8h__incl.md5  AudioCapture_8h_source.tex  AudioServer_2build_2CMakeFiles_23_829_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  AudioServer_2build_2CMakeFiles_23_829_82_2CompilerIdC_2CMakeCCompilerId_8c.tex  AudioServer_2build_2CMakeFiles_2AudioServer_8dir_2main_8cpp_8o_8d.tex  AudioServer_2main_8cpp.tex  AudioServer_2main_8cpp__incl.md5  CameraServer_2build_2CMakeFiles_23_829_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  CameraServer_2build_2CMakeFiles_23_829_82_2CompilerIdC_2CMakeCCompilerId_8c.tex  CameraServer_2build_2CMakeFiles_2CameraServer_8dir_2main_8cpp_8o_8d.tex  CameraServer_2main_8cpp.tex  CameraServer_2main_8cpp__incl.md5  ClientSession_8cpp.tex  ClientSession_8cpp__incl.md5  ClientSession_8h.tex  ClientSession_8h__dep__incl.md5  ClientSession_8h__incl.md5  ClientSession_8h_source.tex  DataCapture_8cpp.tex  DataCapture_8cpp__incl.md5  DataCapture_8h.tex  DataCapture_8h__dep__incl.md5  DataCapture_8h__incl.md5  DataCapture_8h_source.tex  FFmpegEncoder_8cpp.tex  (+183 more)
example/: temp.h264
example/AudioServer/: AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  main.cpp
example/CameraServer/: CMakeLists.txt  FFmpegEncoder.cpp  FFmpegEncoder.h  main.cpp
example/VideoServer/: CMakeLists.txt  main.cpp
inc/: AudioCapture.h  ClientSession.h  DataCapture.h  FFmpegEncoder.h  Global.h  H264Encoder.h  MediaStreamHandler.h  OpusEncoder.h  Protos.h  RTCPPacket.hpp  RTPHeader.h  RTPHeader.hpp  RTPPacket.hpp  RTSPServer.h  RequestHandler.h  TCPHandler.h  UDPHandler.h  VideoCapture.h  event_loop.h  global.h  rtp_header.hpp  rtp_packet.hpp  utils.h
src/: AudioCapture.cpp  ClientSession.cpp  DataCapture.cpp  FFmpegEncoder.cpp  Global.cpp  H264Encoder.cpp  MediaStreamHandler.cpp  OpusEncoder.cpp  Protos.cpp  RTCPPacket.cpp  RTPHeader.cpp  RTPPacket.cpp  RTSPServer.cpp  RequestHandler.cpp  TCPHandler.cpp  UDPHandler.cpp  VideoCapture.cpp  event_loop.cpp  main.cpp  rtp_header.cpp  rtp_packet.cpp  utils.cpp
(+98 files in other folders)
